Sat Oct 18 20:38:48 2014  Kazuki Tsujimoto  <kazuki@callcc.net>

	* vm_core.h, vm.c, proc.c: fix GC mark miss on bindings.
	  [ruby-dev:48616] [Bug #10368]

	* test/ruby/test_eval.rb: add a test code.

Fri Oct 17 22:47:11 2014  Tanaka Akira  <akr@fsij.org>

	* pack.c (pack_unpack): Add casts for char references for 'u'.
	  Fix line ending recognition algorithm.

Fri Oct 17 21:49:52 2014  Tanaka Akira  <akr@fsij.org>

	* pack.c (pack_unpack): Add casts for char references for 'b' and 'h'.

Fri Oct 17 17:50:10 2014  Tanaka Akira  <akr@fsij.org>

	* Avoid undefined behaviors found by gcc -fsanitize=undefined.
	  gcc (Debian 4.9.1-16) 4.9.1

	* string.c (rb_str_sum): Avoid undefined behavior.

Fri Oct 17 17:43:50 2014  Tanaka Akira  <akr@fsij.org>

	* Avoid undefined behaviors found by gcc -fsanitize=undefined.
	  gcc (Debian 4.9.1-16) 4.9.1

	* include/ruby/ruby.h (INT2FIX): Avoid undefined behavior.

	* node.h (nd_set_line): Ditto.

	* pack.c (encodes): Ditto.
	  (pack_unpack): Ditto.

	* regint.h (BIT_STATUS_AT): Ditto.
	  (BS_BIT): Ditto.

	* time.c (time_mdump): Ditto.
	  (time_mload): Ditto.

	* vm_core.h (VM_FRAME_MAGIC_MASK): Ditto.

	* vm_trace.c (recalc_add_ruby_vm_event_flags): Ditto.

Fri Oct 17 15:06:49 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* re.c (unescape_nonascii): make dynamically compiled US-ASCII
	  regexps ASCII-8BIT encoding if binary (hexadecimal, control,
	  meta) escapes are contained, as well as literal regexps.
	  [ruby-dev:48626] [Bug #10382]

Fri Oct 17 03:05:08 2014  Eric Wong  <e@80x24.org>

	* test/-ext-/bug_reporter/test_bug_reporter.rb
	  (test_bug_reporter_add): revert r47972
	* test/ruby/test_rubyoptions.rb (test_segv_test): revert r47971
	  [ruby-core:65764]

Thu Oct 16 23:17:40 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* signal.c (rb_sigaltstack_size): double default size to get rid
	  of heap corruption by alternate stack overflow in SEGV handler.
	  typically happened at fprintf() in control_frame_dump().
